--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="form-container">
                 <form action="">
                     <div class="form-left">
-                        <label for="Technology">Enter the technology you would like to see</label>
+                        <label for="Technology">Enter The technology you would like to see</label>
                         <input type="text" name="Technology" id="Technology">
                         <p>Example: "Computer Processor"</p>
                     </div>
