--- a/index.html
+++ b/index.html
@@ -6,50 +6,83 @@
     <meta https-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
     <link rel="stylesheet" href="css/unemmain.css">
-    
-    
 </head>
+
 <body>
-    <div class="hero-bg">
-        <section class="top">
+    <div class="Hero-bg">:
+
+            <h1>
+                <img src="images/Logo2.png" class="logo">
+            </h1>
+            <!--<section class="FrontCF">
             <header>
-                <a href="unemtech.com">UnemTech.home</a>
+                <a href="#">UnemTech</a>-->
+            <header>
+                <section class="FrontOpts">
+                        <a href="#">UnemTech</a>
+                        <a href="#">Goals</a>
+                        <a href="#">Founders</a>
+                        <a href="#">Products</a>
+                        <a href="#">About</a>
+                </section>
             </header>
 
-            <h1><span>Pushing our civilitation</span> to technological heights</h1>
-
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, minus odit. Vel magni voluptas totam! Placeat dolorum officiis tenetur et!</p>
-
-            <div class="form-container">
-                <form action="">
-                    <div class="form-left">
-                        <label for="Technology">Enter The technology you would like to see</label>
-                        <input type="text" name="Technology" id="Technology">
-                        <p>Example: "Computer Processor"</p>
-                    </div>
-
-                    <input type="button" value="Search technology now">
-                </form>
-            </div>
-        </section>
     </div>
-
-    <section class="Unreal">
-        <div class="right-col">
-            <h2>Unreal. Unforseen.</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel, minus odit. Vel magni voluptas totam! Placeat dolorum officiis tenetur et!</p>
-            <img src="images/Unemfront.jpg" alt="Picture of the milky way galaxy in space">
-        </div>
-    </section>
-
 
 </body>
 
 
 
 
+
+
+
+
+
+<style>
+    .Hero-bg {
+        background-image: url('../images/sanfranfront.jpg');
+        background-size: cover;
+        background-repeat: no-repeat;
+        height: 100vh;
+    }
+
+    .FrontCF {
+        text-align:center
+    }
+
+    .FrontOpts {
+        text-align: center;
+
+    }
+
+
+    a:link {
+  color: rgb(81, 96, 146);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:visited {
+  color: rgb(197, 196, 196);
+  background-color: transparent;
+  text-decoration: none;
+}
+
+a:hover {
+  background-color: gray
+
+}
+
+a:active {
+  color: rgb(0, 0, 0);
+  background-color: transparent;
+  text-decoration: underline;
+}
+
+</style>
+
+
+
+
 </html>
-
-
-
-
